# trip-planner-ai

./: README.md  pyproject.toml
.streamlit/: pages.toml
migrations/: env.py
migrations/versions/: 1b45810c07d1_add_table_users.py  efaf3b445cdd_add_table_trips.py
trip_planner/: app.py
trip_planner/db/: connection.py  query.py  tables.py
trip_planner/llm/: models.py  travel_agent.py
trip_planner/pages/: login.py  new_trip.py  planner.py  settings.py  trip_details.py  trips.py
trip_planner/sb/: __init__.py
trip_planner/util/: validator.py
